# sf-project

./: .gitignore  .user.yml  dbt_project.yml  pyproject.toml
models/dim/: dim_campaigns_gl.sql
models/marts/: fct_google.sql  fct_sales.sql
models/staging/: stg_ga4_sessions.sql  stg_google_metrics.sql  stg_servicios_diario.sql
querys/: stg_ga4_channel_keys.sql
seeds/: dim_channel.csv  dim_dates.csv  dim_services.csv
